# limitless

./: .env.vds.example  .gitignore  VDS_DEPLOY.md  docker-compose.yml
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CapsuleNav.css  CapsuleNav.tsx  GlobalStarfield.tsx  MessageBubble.css  MessageBubble.tsx  ProfileAvatar.css  ProfileAvatar.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  TypingIndicator.css  TypingIndicator.tsx
frontend/src/pages/: AdminPage.css  AdminPage.tsx  AuthPage.css  AuthPage.tsx  ChatPage.css  ChatPage.tsx  LandingPage.css  LandingPage.tsx  ProfilePage.css  ProfilePage.tsx  UserAgreementPage.css  UserAgreementPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: accountApi.ts  aiProvider.ts  authErrors.ts  gemini.ts  profile.ts  storage.ts
rust-backend/: .dockerignore  Cargo.toml  Dockerfile
rust-backend/src/: auth.rs  main.rs
telegram-bot/: .dockerignore  Dockerfile  bot.py  requirements.txt
telegram-support-bot/: .dockerignore  Dockerfile  bot.py
